target/generated-sources/antlr4/parser/PrologParser.java
// Generated from Prolog.g4 by ANTLR 4.2.2
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrologParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__50=1, T__49=2, T__48=3, T__47=4, T__46=5, T__45=6, T__44=7, T__43=8, 
		T__42=9, T__41=10, T__40=11, T__39=12, T__38=13, T__37=14, T__36=15, T__35=16, 
		T__34=17, T__33=18, T__32=19, T__31=20, T__30=21, T__29=22, T__28=23, 
		T__27=24, T__26=25, T__25=26, T__24=27, T__23=28, T__22=29, T__21=30, 
		T__20=31, T__19=32, T__18=33, T__17=34, T__16=35, T__15=36, T__14=37, 
		T__13=38, T__12=39, T__11=40, T__10=41, T__9=42, T__8=43, T__7=44, T__6=45, 
		T__5=46, T__4=47, T__3=48, T__2=49, T__1=50, T__0=51, LINECOMM=52, MULTLINECOMM=53, 
		WS=54, LBRACKET=55, RBRACKET=56, LPAREN=57, RPAREN=58, LBRACE=59, RBRACE=60, 
		COMMA=61, BAR=62, DOT=63, CHARARRAY=64, INT=65, FLOAT=66, CON=67, VAR=68;
	public static final String[] tokenNames = {
		"<INVALID>", "' div '", "'=..'", "'=<'", "'**'", "'>>'", "'='", "'@>'", 
		"'^'", "' rdiv '", "' as '", "'@>='", "'\\=@='", "'*->'", "'$'", "'\\='", 
		"':-'", "'=@='", "'>='", "'\\+'", "'//'", "'<'", "'@'", "'=:='", "' rem '", 
		"'-->'", "'+'", "'/'", "'@<'", "'\\'", "';'", "'<<'", "' mod '", "'\\/'", 
		"':='", "'?'", "'*'", "'->'", "'not '", "' xor '", "':'", "'=\\='", "'=='", 
		"'>'", "':<'", "'>:<'", "'@=<'", "' is '", "'\\=='", "'/\\'", "'-'", "'?-'", 
		"LINECOMM", "MULTLINECOMM", "WS", "'['", "']'", "'('", "')'", "'{'", "'}'", 
		"','", "'|'", "'.'", "CHARARRAY", "INT", "FLOAT", "CON", "VAR"
	};
	public static final int
		RULE_predname = 0, RULE_argseq = 1, RULE_parenthesized = 2, RULE_expr = 3, 
		RULE_list = 4, RULE_predicate = 5, RULE_plrule = 6, RULE_query = 7, RULE_number = 8, 
		RULE_variable = 9, RULE_toprule = 10;
	public static final String[] ruleNames = {
		"predname", "argseq", "parenthesized", "expr", "list", "predicate", "plrule", 
		"query", "number", "variable", "toprule"
	};

	@Override
	public String getGrammarFileName() { return "Prolog.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrologParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PrednameContext extends ParserRuleContext {
		public List<TerminalNode> BAR() { return getTokens(PrologParser.BAR); }
		public List<TerminalNode> DOT() { return getTokens(PrologParser.DOT); }
		public TerminalNode CON() { return getToken(PrologParser.CON, 0); }
		public TerminalNode BAR(int i) {
			return getToken(PrologParser.BAR, i);
		}
		public TerminalNode DOT(int i) {
			return getToken(PrologParser.DOT, i);
		}
		public PrednameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterPredname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitPredname(this);
		}
	}

	public final PrednameContext predname() throws RecognitionException {
		PrednameContext _localctx = new PrednameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_predname);
		int _la;
		try {
			int _alt;
			setState(28);
			switch (_input.LA(1)) {
			case CON:
				enterOuterAlt(_localctx, 1);
				{
				setState(22); match(CON);
				}
				break;
			case 1:
			case 6:
			case 8:
			case 9:
			case 10:
			case 14:
			case 21:
			case 22:
			case 24:
			case 26:
			case 27:
			case 29:
			case 30:
			case 32:
			case 35:
			case 36:
			case 39:
			case 40:
			case 43:
			case 47:
			case 50:
			case BAR:
			case DOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(24); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(23);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 10) | (1L << 14) | (1L << 21) | (1L << 22) | (1L << 24) | (1L << 26) | (1L << 27) | (1L << 29) | (1L << 30) | (1L << 32) | (1L << 35) | (1L << 36) | (1L << 39) | (1L << 40) | (1L << 43) | (1L << 47) | (1L << 50) | (1L << BAR) | (1L << DOT))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(26); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				} while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgseqContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PrologParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PrologParser.COMMA, i);
		}
		public ArgseqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argseq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterArgseq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitArgseq(this);
		}
	}

	public final ArgseqContext argseq() throws RecognitionException {
		ArgseqContext _localctx = new ArgseqContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_argseq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); expr(0);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(31); match(COMMA);
				setState(32); expr(0);
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParenthesizedContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(PrologParser.LPAREN, 0); }
		public ArgseqContext argseq() {
			return getRuleContext(ArgseqContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PrologParser.RPAREN, 0); }
		public ParenthesizedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parenthesized; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterParenthesized(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitParenthesized(this);
		}
	}

	public final ParenthesizedContext parenthesized() throws RecognitionException {
		ParenthesizedContext _localctx = new ParenthesizedContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parenthesized);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); match(LPAREN);
			setState(39); argseq();
			setState(40); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode CHARARRAY() { return getToken(PrologParser.CHARARRAY, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ParenthesizedContext parenthesized() {
			return getRuleContext(ParenthesizedContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				{
				setState(43); match(51);
				}
				setState(44); expr(14);
				}
				break;

			case 2:
				{
				setState(45);
				_la = _input.LA(1);
				if ( !(_la==19 || _la==38) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(46); expr(10);
				}
				break;

			case 3:
				{
				{
				setState(47); match(14);
				}
				setState(48); expr(1);
				}
				break;

			case 4:
				{
				setState(55);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(49); parenthesized();
					}
					break;

				case 2:
					{
					setState(50); list();
					}
					break;

				case 3:
					{
					setState(51); predicate();
					}
					break;

				case 4:
					{
					setState(52); number();
					}
					break;

				case 5:
					{
					setState(53); variable();
					}
					break;

				case 6:
					{
					setState(54); match(CHARARRAY);
					}
					break;
				}
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(95);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(59);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(60);
						_la = _input.LA(1);
						if ( !(_la==16 || _la==25) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(61); expr(16);
						}
						break;

					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(62);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						{
						setState(63); match(30);
						}
						setState(64); expr(14);
						}
						break;

					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(65);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(66);
						_la = _input.LA(1);
						if ( !(_la==13 || _la==37) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(67); expr(13);
						}
						break;

					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(68);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(69); match(34);
						setState(70); expr(12);
						}
						break;

					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(71);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(72);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 7) | (1L << 11) | (1L << 12) | (1L << 15) | (1L << 17) | (1L << 18) | (1L << 21) | (1L << 23) | (1L << 28) | (1L << 41) | (1L << 42) | (1L << 43) | (1L << 44) | (1L << 45) | (1L << 46) | (1L << 48))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(73); expr(10);
						}
						break;

					case 6:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(74);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(75); match(40);
						setState(76); expr(9);
						}
						break;

					case 7:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(77);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(78);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 5) | (1L << 9) | (1L << 20) | (1L << 24) | (1L << 27) | (1L << 31) | (1L << 32) | (1L << 36))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(79); expr(8);
						}
						break;

					case 8:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(80);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(81);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 26) | (1L << 33) | (1L << 39) | (1L << 49) | (1L << 50))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(82); expr(7);
						}
						break;

					case 9:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(83);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						{
						setState(84); match(35);
						}
						setState(85); expr(6);
						}
						break;

					case 10:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(86);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						{
						setState(87); match(4);
						}
						setState(88); expr(5);
						}
						break;

					case 11:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(89);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						{
						setState(90); match(8);
						}
						setState(91); expr(4);
						}
						break;

					case 12:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(92);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(93);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 6) | (1L << 47))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(94); expr(3);
						}
						break;
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode RBRACKET() { return getToken(PrologParser.RBRACKET, 0); }
		public TerminalNode BAR() { return getToken(PrologParser.BAR, 0); }
		public ArgseqContext argseq() {
			return getRuleContext(ArgseqContext.class,0);
		}
		public TerminalNode LBRACKET() { return getToken(PrologParser.LBRACKET, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100); match(LBRACKET);
			setState(109);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 10) | (1L << 14) | (1L << 19) | (1L << 21) | (1L << 22) | (1L << 24) | (1L << 26) | (1L << 27) | (1L << 29) | (1L << 30) | (1L << 32) | (1L << 35) | (1L << 36) | (1L << 38) | (1L << 39) | (1L << 40) | (1L << 43) | (1L << 47) | (1L << 50) | (1L << 51) | (1L << LBRACKET) | (1L << LPAREN) | (1L << BAR) | (1L << DOT))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (CHARARRAY - 64)) | (1L << (INT - 64)) | (1L << (FLOAT - 64)) | (1L << (CON - 64)) | (1L << (VAR - 64)))) != 0)) {
				{
				setState(101); argseq();
				setState(107);
				_la = _input.LA(1);
				if (_la==BAR) {
					{
					setState(102); match(BAR);
					setState(105);
					switch (_input.LA(1)) {
					case LBRACKET:
						{
						setState(103); list();
						}
						break;
					case VAR:
						{
						setState(104); variable();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
				}

				}
			}

			setState(111); match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public PrednameContext predname() {
			return getRuleContext(PrednameContext.class,0);
		}
		public ParenthesizedContext parenthesized() {
			return getRuleContext(ParenthesizedContext.class,0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitPredicate(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_predicate);
		try {
			setState(118);
			switch (_input.LA(1)) {
			case 1:
			case 6:
			case 8:
			case 9:
			case 10:
			case 14:
			case 21:
			case 22:
			case 24:
			case 26:
			case 27:
			case 29:
			case 30:
			case 32:
			case 35:
			case 36:
			case 39:
			case 40:
			case 43:
			case 47:
			case 50:
			case BAR:
			case DOT:
			case CON:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(113); predname();
				setState(115);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(114); parenthesized();
					}
					break;
				}
				}
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(117); parenthesized();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlruleContext extends ParserRuleContext {
		public ArgseqContext argseq() {
			return getRuleContext(ArgseqContext.class,0);
		}
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public PlruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plrule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterPlrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitPlrule(this);
		}
	}

	public final PlruleContext plrule() throws RecognitionException {
		PlruleContext _localctx = new PlruleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_plrule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); predicate();
			setState(123);
			_la = _input.LA(1);
			if (_la==16) {
				{
				setState(121); match(16);
				setState(122); argseq();
				}
			}

			setState(125); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public ArgseqContext argseq() {
			return getRuleContext(ArgseqContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(51);
			setState(128); argseq();
			setState(129); match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(PrologParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(PrologParser.FLOAT, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if (_la==50) {
				{
				setState(131); match(50);
				}
			}

			setState(134);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(PrologParser.VAR, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(VAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopruleContext extends ParserRuleContext {
		public PlruleContext plrule(int i) {
			return getRuleContext(PlruleContext.class,i);
		}
		public List<PlruleContext> plrule() {
			return getRuleContexts(PlruleContext.class);
		}
		public List<QueryContext> query() {
			return getRuleContexts(QueryContext.class);
		}
		public QueryContext query(int i) {
			return getRuleContext(QueryContext.class,i);
		}
		public TopruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toprule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).enterToprule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrologListener ) ((PrologListener)listener).exitToprule(this);
		}
	}
